# apfun

./: .env.example  .gitignore  CLAUDE.md  Makefile  project-brief.md  pyproject.toml  pyrightconfig.json
apfun/: __init__.py  config.py  db.py  main.py
apfun/clients/: __init__.py  dataforseo.py
apfun/llm/: __init__.py  client.py
apfun/models/: __init__.py  api_usage.py  approval.py  base.py  candidate.py  competitive_analysis.py  dataforseo_usage.py  demand_check.py  llm_run.py  opportunity.py  project.py  raw_signal.py  runtime_state.py  scheduler_run.py  score.py  signal_text.py  source.py
apfun/pipeline/: __init__.py  _extractors.py  _source_identifier.py  cluster.py  merge.py  normalize.py
apfun/scheduler/: __init__.py  jobs.py  pause_state.py  setup.py
apfun/sourcing/: __init__.py  _base.py  _rate_limit.py  hn.py  indiehackers.py  producthunt.py  reddit.py
apfun/web/: __init__.py
docs/operator/: SETUP.md
docs/orchestrator/: 001-feedback.md  001-gate2-plan-and-stack.md  002-db-foundations-checks.md  002-feedback.md  003-feedback.md  003-llm-client-plan.md  004-feedback.md  004-llm-wrapper-results.md  005-feedback.md  005-llm-wrapper-hardened.md  006-feedback.md  006-verify-constants-applied.md  007-feedback.md  007-pre-task-005-tidy.md  008-feedback.md  008-synthetic-fixture-guard.md  009-feedback.md  009-pre-task-005-ready.md  010-feedback.md  010-task-005-spec-final.md  011-feedback-010-applied.md  011-feedback.md  012-feedback.md  012-task-005-todo-verify-escalation.md  013-feedback.md  014-feedback.md  014-task-009-prep.md  (+27 more)
migrations/: env.py
scripts/: backfill_buildability.py  build_css.sh  capture_hn_fixture.py  capture_indiehackers_fixture.py  capture_producthunt_fixture.py  capture_reddit_fixture.py  capture_response_fixture.py  capture_review_fixture.py  db_snapshot.sh  dump_nulled_signals.py  dump_run_artifacts.py  import_reviews.py  init_db.py  post-rebuild-bootstrap.sh  replay_clustering.py  seed_sources.py  setup_playwright.py
tests/: conftest.py
(+143 files in other folders)
