[project]
name = "apfun"
version = "0.1.0"
description = "SaaS opportunity funnel — mines signals, scores opportunities, feeds approved candidates into a build pipeline."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic-settings>=2.6",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pyright>=1.1",
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apfun"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "UP",
    "B",
    "SIM",
    "C4",
]

[tool.ruff.format]
quote-style = "double"
